<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="app_name" translatable="false">Recipe Helper</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="createYourRecipe">Create your own recipe</string>
    <string name="describeStep">Describe your step</string>
    <string name="description_1">This app helps you manage, create, and view your recipes.</string>
    <string name="description_2">Click one of the tabs at the bottom of your screen to get started.</string>
    <string name="error">Error</string>
    <string name="home">Home</string>
    <string name="ingredientCount">Count</string>
    <string name="ingredientName">Name</string>
    <string name="ingredientUnit">Unit</string>
    <string name="ingredients">Ingredients</string>
    <string name="json" translatable="false">.json</string>
    <string name="loadFromFile">Load from file</string>
    <string name="more">More…</string>
    <string name="recipeName">Recipe Name</string>
    <string name="settings">Settings</string>
    <string name="steps">Steps</string>
    <string name="view">View</string>
    <string name="viewARecipe">View a recipe</string>
    <string name="welcome">Welcome to Recipe Helper!</string>
    <string name="save_tab_states">Save tab states</string>
    <string name="undo">Undo</string>
    <string name="cleared">Cleared.</string>
    <string name="error_reading_file">Error reading file</string>
    <string name="error_parsing_json">Error parsing JSON</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_message">Your recipe has unsaved changes. If you choose "Don't save", all your changes will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dontsave">Don\'t save</string>
    <string name="library">Library</string>
    <string name="error_generating_recipe">Error generating recipe</string>
    <string name="recipe_created">Recipe created!</string>
    <string name="save_to_lib">Save to library</string>
    <string name="save_to_internal">Save to internal storage</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="error_saving_recipe">Error saving recipe</string>
    <string name="error_creating_bottom_sheet">Error creating bottom sheet</string>
    <string name="error_saving_recipe_details">The recipe couldn\'t be saved due to an unexpected error.</string>
    <string name="ok">OK</string>
    <string name="recipe_saved">Recipe saved!</string>
    <string name="error_loading_recipes">Error loading recipes</string>
    <string name="edit">Edit</string>
    <string name="addDesc"><u>Add description</u></string>
    <string name="delete_recipe">Delete recipe?</string>
    <string name="delete_recipe_desc">If you delete this recipe, there\'s no going back.</string>
    <string name="yes">Yes</string>
    <string name="error_deleting_recipe">Error deleting recipe</string>
    <string name="no">No</string>
    <string name="error_loading_recipe">Error loading recipe</string>
    <string name="editRecipeData">Edit recipe data</string>
    <string name="not_implemented" translatable="false">Not implemented yet</string>
    <string name="multiply">Multiply…</string>
    <string name="showNumbers">Show numbers</string>
    <string name="removeUnneededFloatingPoints">Remove unnessesary floating points</string>
    <string name="saveMultiplier">Save multiplier globally</string>
    <string name="error_loading_ingredients">Error loading ingredients</string>
    <string name="delete">Delete</string>
    <string name="delete_recipes">Delete recipes?</string>
    <string name="delete_recipes_desc">All recipes you have selected will be permanently deleted.</string>
    <string name="export">Export…</string>
    <string name="share">Share</string>
    <string name="selectall">Select all</string>
    <string name="quickmode">Quick mode</string>
    <string name="prepare_ings">Prepare the ingredients</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
</resources>