<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/edit"
        android:title="@string/create"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/preview"
        android:title="@string/view"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/info"
        android:title="@string/about"/>
</menu>