<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="#?"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientName"
        android:layout_weight="2"
        android:layout_marginEnd="5dp"
        style="?attr/textInputFilledStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientCount"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"
        style="?attr/textInputFilledStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientUnit"
        android:layout_weight="1"
        style="?attr/textInputFilledStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollHorizontally="true"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:theme="@style/Theme.RemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/design_default_color_error"
        android:contentDescription="@string/clear"
        app:icon="@drawable/delete"
        style="@style/Theme.RemoveButton" />
</LinearLayout>
