<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        style="@style/Widget.Material3.BottomSheet"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!-- Loading progress -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/recipeDetail_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Main content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:id="@+id/recipeDetail_mainLayout"
            android:visibility="gone"
            tools:visibility="visible">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Example Recipe"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:id="@+id/recipeDetail_name" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/recipeDetail_edit"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit"
                    app:icon="@drawable/edit"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <!-- Description -->
            <TextView
                android:id="@+id/recipeDetail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/addDesc"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Actions -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.TonalButton.Icon"
                    android:text="@string/edit"
                    app:icon="@drawable/edit"
                    android:id="@+id/recipeDetail_editRecipe"
                    android:layout_marginEnd="5dp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.Icon"
                    android:text="@string/view"
                    app:icon="@drawable/preview"
                    android:id="@+id/recipeDetail_view" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:id="@+id/recipeDetail_export"
                    android:contentDescription="@string/export"
                    app:icon="@drawable/export" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/materialIconButtonFilledStyle"
                    android:id="@+id/recipeDetail_share"
                    android:contentDescription="@string/share"
                    app:icon="@drawable/share" />
                <Button
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    app:icon="@drawable/delete"
                    android:contentDescription="@string/delete"
                    android:theme="@style/Theme.RemoveButton"
                    android:id="@+id/recipeDetail_remove" />
            </LinearLayout>

            <!-- Ingredients -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusable="true"
                android:id="@+id/recipeDetail_ingredientsCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/ingredients"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />

                    <LinearLayout
                        android:id="@+id/recipeDetail_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!--
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="#?"
                                android:textSize="20sp"
                                tools:ignore="HardcodedText" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="?attr/textInputFilledStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="2.5dp"
                                android:layout_weight="2"
                                android:hint="@string/ingredientName">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none"
                                    tools:ignore="TextContrastCheck" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="?attr/textInputFilledStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:layout_weight="1"
                                android:hint="@string/ingredientCount">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="?attr/textInputFilledStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2.5dp"
                                android:layout_weight="1"
                                android:hint="@string/ingredientUnit">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                        -->
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>